--- a/website/src/css/imports/community.css
+++ b/website/src/css/imports/community.css
@@ -4,32 +4,35 @@
   padding: $xl 0 $large 0;
 
   .community-features {
+    @neat-span-columns 8;
 
+    @media screen and (min-width: $desktop) {
+      @neat-span-columns 6;
+    }
 
     .feature {
       margin-top: $small;
 
-      @media screen and (min-width: $tablet) {
-        @neat-span-columns 6;
-      }
-
-      &.contributors {
-
-        @media screen and (min-width: $tablet) {
-          @neat-span-columns 8;
-        }
-
-        .contributor-list {
-          margin-top: $micro;
-          img {
-            width: 32px;
-            margin: 0 $micro $micro 0;
-            border-radius: 16px;
-          }
-        }
-
-      }
-
     }
+  }
+
+  .contributors {
+    @neat-span-columns 10;
+    margin-top: $small;
+
+    @media screen and (min-width: $desktop) {
+      @neat-span-columns 5;
+      float: right;
+    }
+
+    .contributor-list {
+      margin-top: $micro;
+      img {
+        width: 32px;
+        margin: 0 $micro $micro 0;
+        border-radius: 16px;
+      }
+    }
+
   }
 }
