--- a/website/src/css/imports/cta.css
+++ b/website/src/css/imports/cta.css
@@ -38,23 +38,27 @@
       color: white;
       text-transform: uppercase;
       font-size: $tiny;
+      letter-spacing: 0.5px;
       background-color: $blue;
       background-image: linear-gradient(-180deg, #4A7FDD 0%, #3A69C7 100%);
       box-shadow: 0 4px 12px 0 rgba(68,74,87,0.10), 0 1px 3px 0 rgba(68,74,87,0.20);
       border-radius: $borderRadius;
       padding: 12px 18px 12px 18px;
       transition: .2s;
+      text-align: center;
 
       @media screen and (min-width: $desktop) {
-        min-width: 122px;
+        min-width: 120px;
         margin: 0 0 0 $small;
       }
 
       &:hover {
-        margin-right: -4px;
+        transform: scale(1.05);
+        box-shadow: 0 4px 12px 0 rgba(68,74,87,0.20), 0 1px 3px 0 rgba(68,74,87,0.40);
       }
       &:active {
-        transform: scale(0.9);
+        transform: scale(0.95);
+        box-shadow: none;
       }
     }
 
